--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>EcoMolina Industrial</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EcoMolina Industrial | Ingeniería Sostenible</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Bienvenidos a EcoMolina Industrial</h1>
-    <p>Sitio en construcción.</p>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+    <nav class="bg-blue-900 p-4 text-white shadow-lg">
+        <div class="container mx-auto flex justify-between items-center">
+            <h1 class="text-xl font-bold tracking-tight">ECOMOLINA <span class="text-green-400">INDUSTRIAL</span></h1>
+            <div class="space-x-4">
+                <a href="#" class="hover:text-green-400">Inicio</a>
+                <a href="#" class="hover:text-green-400">Servicios</a>
+                <a href="#" class="hover:text-green-400">Contacto</a>
+            </div>
+        </div>
+    </nav>
+
+    <header class="bg-white py-20 border-b">
+        <div class="container mx-auto text-center px-4">
+            <h2 class="text-4xl md:text-5xl font-extrabold text-blue-900 mb-4">Soluciones Industriales para un Futuro Sostenible</h2>
+            <p class="text-lg text-gray-600 mb-8">Especialistas en procesos de eficiencia energética y gestión de recursos.</p>
+            <button class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full font-bold transition">Saber más</button>
+        </div>
+    </header>
+
+    <section class="py-16 container mx-auto px-4">
+        <div class="grid md:grid-cols-3 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow-md border-t-4 border-blue-900">
+                <h3 class="text-xl font-bold mb-2">Optimización</h3>
+                <p class="text-gray-600">Mejoramos el rendimiento de maquinaria industrial con bajo impacto ambiental.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md border-t-4 border-blue-900">
+                <h3 class="text-xl font-bold mb-2">Consultoría</h3>
+                <p class="text-gray-600">Asesoramiento técnico en normativas ambientales y eficiencia.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md border-t-4 border-blue-900">
+                <h3 class="text-xl font-bold mb-2">Mantenimiento</h3>
+                <p class="text-gray-600">Soporte técnico especializado con enfoque en sostenibilidad.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-gray-900 text-white py-8 text-center">
+        <p>&copy; 2024 EcoMolina Industrial. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 </html>
